# ESP32_S3_Smart_Watch

./: CMakeLists.txt
components/axp2101/: CMakeLists.txt  axp2101.cpp
components/axp2101/include/: axp2101.h
components/display/: CMakeLists.txt  display.cpp
components/display/include/: display.h
components/qmi8658/: CMakeLists.txt
components/smart_watch_ui/: CMakeLists.txt  smart_watch_ui.cpp
components/smart_watch_ui/include/: smart_watch_ui.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
